--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       --text-muted: #5b6664;
       --btn: #10b981;
       --btn-hover: #0e9f6e;
-      --radius-lg: 12px;
-      --shadow: 0 4px 12px rgba(0,0,0,.2);
+      --radius-lg: 16px;
+      --shadow: 0 6px 16px rgba(0,0,0,.2);
     }
 
     body.home {
@@ -28,82 +28,98 @@
 
     /* HERO */
     .home .hero{
-      padding: 18px 12px;
+      padding: 28px 16px 8px;
       background: linear-gradient(180deg, var(--bg-hero), transparent);
       text-align: center;
     }
     .home .hero h1{
-      margin: 0 0 4px;
-      font-size: 22px;
+      margin: 0 0 8px;
+      font-size: clamp(26px, 6vw, 40px);
       font-weight: 800;
     }
     .home .hero p{
-      margin: 0;
-      font-size: 13px;
+      margin: 0 auto 8px;
+      max-width: 800px;
       color: #d7e3e1;
+      font-size: clamp(14px, 2.8vw, 17px);
     }
 
     /* GRID */
-    .home .wrap{
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 20px 10px 40px;
-    }
+    .home .wrap{max-width: 1100px; margin: 0 auto; padding: 10px 14px 40px;}
     .home .cards{
       display: grid;
-      grid-template-columns: repeat(3, 1fr); /* завжди 3 */
-      gap: 20px; /* 🔥 більше відступів */
+      grid-template-columns: repeat(3, 1fr); /* завжди 3 у верхньому ряду */
+      gap: 16px;
       justify-content: center;
     }
 
-    /* КАРТКА */
+    /* для останніх 2 карток */
+    .home .cards .card:nth-last-child(-n+2){
+      grid-column: span 1;
+    }
+    .home .cards.two-row{
+      grid-template-rows: auto auto;
+      grid-auto-flow: row;
+    }
+
+    /* CARD */
     .home .card{
-      width: 100%;
-      max-width: 170px; /* 🔥 всі однакового розміру */
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       background: var(--card-bg);
       color: var(--text-dark);
       border-radius: var(--radius-lg);
       box-shadow: var(--shadow);
       overflow: hidden;
-      transition: transform .18s ease;
-      margin: 0 auto; /* 🔥 щоб всі рівнялись по центру */
+      transition: transform .18s ease, box-shadow .18s ease;
+      border: 1px solid #ddd; /* межі карток */
     }
-    .home .card:hover{ transform: translateY(-2px); }
+    .home .card:hover{ transform: translateY(-4px); box-shadow: 0 10px 20px rgba(0,0,0,.25); }
 
     .home .card .media{
       width: 100%;
-      height: 80px;
+      height: 100px;
       background-size: cover;
       background-position: center;
     }
 
     .home .card .content{
-      padding: 10px 8px 14px;
+      padding: 12px 14px 16px;
       text-align: center;
+      display: grid;
+      gap: 6px;
     }
     .home .card h3{
-      margin: 0 0 6px;
-      font-size: 13px;
-      font-weight: 700;
+      margin: 0;
+      font-size: 15px;
+      font-weight: 800;
+      line-height: 1.3;
     }
     .home .card p{
-      margin: 0 0 10px;
-      font-size: 11px;
+      margin: 0 auto;
       color: var(--text-muted);
-      line-height: 1.3;
+      font-size: 13px;
+      line-height: 1.4;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
 
     .home .btn{
       display: inline-block;
-      padding: 6px 14px;
+      margin: 6px auto 2px;
+      padding: 8px 16px;
       background: var(--btn);
       color: #fff;
-      font-size: 11px;
-      font-weight: 600;
-      border-radius: 999px;
       text-decoration: none;
+      font-weight: 700;
+      font-size: 14px;
+      border-radius: 999px;
+      transition: background .18s ease, transform .18s ease;
     }
-    .home .btn:hover{ background: var(--btn-hover); }
+    .home .btn:hover{ background: var(--btn-hover); transform: translateY(-1px); }
   </style>
 </head>
 
@@ -116,14 +132,14 @@
 
   <!-- КАРТКИ -->
   <main class="wrap">
-    <section class="cards">
+    <section class="cards two-row">
 
       <!-- 1 -->
       <article class="card">
         <div class="media" style="background-image:url('https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=900&q=80');"></div>
         <div class="content">
           <h3>Фінансова грамотність</h3>
-          <p>Розберіться, як працюють гроші.</p>
+          <p>Розберіться, як працюють гроші, щоб жити впевнено.</p>
           <a class="btn" href="article1.html">Читати</a>
         </div>
       </article>
@@ -133,42 +149,11 @@
         <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
         <div class="content">
           <h3>Як планувати бюджет</h3>
-          <p>Навчіться правильно витрачати.</p>
+          <p>Навчіться правильно розподіляти витрати та створити дисципліну.</p>
           <a class="btn" href="article2.html">Читати</a>
         </div>
       </article>
 
       <!-- 3 -->
       <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=900&q=80');"></div>
-        <div class="content">
-          <h3>Інвестування</h3>
-          <p>Почніть без великих ризиків.</p>
-          <a class="btn" href="article3.html">Читати</a>
-        </div>
-      </article>
-
-      <!-- 4 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
-        <div class="content">
-          <h3>Фінансова подушка</h3>
-          <p>Захист для будь-кого.</p>
-          <a class="btn" href="article4.html">Читати</a>
-        </div>
-      </article>
-
-      <!-- 5 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://raw.githubusercontent.com/Hnidets523/My-finance-/refs/heads/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png');"></div>
-        <div class="content">
-          <h3>Економія грошей</h3>
-          <p>Лайфхаки без втрати якості.</p>
-          <a class="btn" href="article5.html">Читати</a>
-        </div>
-      </article>
-
-    </section>
-  </main>
-</body>
-</html>
+        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=900&q
