--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       --text-muted: #5b6664;
       --btn: #10b981;
       --btn-hover: #0e9f6e;
-      --radius-lg: 16px;
-      --shadow: 0 6px 16px rgba(0,0,0,.2);
+      --radius-lg: 14px;
+      --shadow: 0 6px 14px rgba(0,0,0,.18);
     }
 
     body.home {
@@ -34,7 +34,7 @@
     }
     .home .hero h1{
       margin: 0 0 8px;
-      font-size: clamp(26px, 6vw, 40px);
+      font-size: clamp(26px, 6vw, 38px);
       font-weight: 800;
     }
     .home .hero p{
@@ -45,21 +45,17 @@
     }
 
     /* GRID */
-    .home .wrap{max-width: 1100px; margin: 0 auto; padding: 10px 14px 40px;}
-    .home .cards{
-      display: grid;
-      grid-template-columns: repeat(3, 1fr); /* завжди 3 у верхньому ряду */
-      gap: 16px;
-      justify-content: center;
+    .home .wrap{
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 10px 14px 40px;
     }
 
-    /* для останніх 2 карток */
-    .home .cards .card:nth-last-child(-n+2){
-      grid-column: span 1;
-    }
-    .home .cards.two-row{
-      grid-template-rows: auto auto;
-      grid-auto-flow: row;
+    .home .cards{
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 14px;
+      justify-items: center;
     }
 
     /* CARD */
@@ -73,34 +69,37 @@
       box-shadow: var(--shadow);
       overflow: hidden;
       transition: transform .18s ease, box-shadow .18s ease;
-      border: 1px solid #ddd; /* межі карток */
+      border: 1px solid #ddd;
+      width: 100%;
+      max-width: 200px;  /* компактніші */
+      min-height: 230px; /* всі однакові */
     }
     .home .card:hover{ transform: translateY(-4px); box-shadow: 0 10px 20px rgba(0,0,0,.25); }
 
     .home .card .media{
       width: 100%;
-      height: 100px;
+      height: 90px;
       background-size: cover;
       background-position: center;
     }
 
     .home .card .content{
-      padding: 12px 14px 16px;
+      padding: 10px 12px 14px;
       text-align: center;
       display: grid;
       gap: 6px;
     }
     .home .card h3{
       margin: 0;
-      font-size: 15px;
+      font-size: 14px;
       font-weight: 800;
-      line-height: 1.3;
+      line-height: 1.2;
     }
     .home .card p{
       margin: 0 auto;
       color: var(--text-muted);
-      font-size: 13px;
-      line-height: 1.4;
+      font-size: 12px;
+      line-height: 1.3;
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
@@ -110,12 +109,12 @@
     .home .btn{
       display: inline-block;
       margin: 6px auto 2px;
-      padding: 8px 16px;
+      padding: 6px 14px;
       background: var(--btn);
       color: #fff;
       text-decoration: none;
       font-weight: 700;
-      font-size: 14px;
+      font-size: 13px;
       border-radius: 999px;
       transition: background .18s ease, transform .18s ease;
     }
@@ -132,7 +131,7 @@
 
   <!-- КАРТКИ -->
   <main class="wrap">
-    <section class="cards two-row">
+    <section class="cards">
 
       <!-- 1 -->
       <article class="card">
@@ -156,4 +155,35 @@
 
       <!-- 3 -->
       <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=900&q
+        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=900&q=80');"></div>
+        <div class="content">
+          <h3>Інвестування</h3>
+          <p>Почніть без великих ризиків і з розумінням інструментів.</p>
+          <a class="btn" href="article3.html">Читати</a>
+        </div>
+      </article>
+
+      <!-- 4 -->
+      <article class="card">
+        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
+        <div class="content">
+          <h3>Фінансова подушка</h3>
+          <p>Захист для будь-кого.</p>
+          <a class="btn" href="article4.html">Читати</a>
+        </div>
+      </article>
+
+      <!-- 5 -->
+      <article class="card">
+        <div class="media" style="background-image:url('https://raw.githubusercontent.com/Hnidets523/My-finance-/refs/heads/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png');"></div>
+        <div class="content">
+          <h3>Економія грошей</h3>
+          <p>Лайфхаки без втрати якості.</p>
+          <a class="btn" href="article5.html">Читати</a>
+        </div>
+      </article>
+
+    </section>
+  </main>
+</body>
+</html>
