--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       --text-muted: #5b6664;
       --btn: #10b981;
       --btn-hover: #0e9f6e;
-      --radius-lg: 14px;
-      --shadow: 0 4px 10px rgba(0,0,0,.18);
+      --radius-lg: 12px;
+      --shadow: 0 3px 8px rgba(0,0,0,.15);
     }
 
     body.home {
@@ -28,33 +28,33 @@
 
     /* HERO */
     .home .hero{
-      padding: 20px 16px 8px;
+      padding: 18px 12px 6px;
       background: linear-gradient(180deg, var(--bg-hero), transparent);
       text-align: center;
     }
     .home .hero h1{
-      margin: 0 0 8px;
-      font-size: clamp(22px, 6vw, 34px);
+      margin: 0 0 6px;
+      font-size: clamp(20px, 6vw, 28px);
       font-weight: 800;
     }
     .home .hero p{
-      margin: 0 auto 8px;
-      max-width: 800px;
+      margin: 0 auto 6px;
+      max-width: 700px;
       color: #d7e3e1;
-      font-size: clamp(13px, 2.8vw, 16px);
+      font-size: clamp(12px, 2.5vw, 14px);
     }
 
     /* GRID */
     .home .wrap{
-      max-width: 900px;
+      max-width: 800px;
       margin: 0 auto;
-      padding: 10px 14px 30px;
+      padding: 8px 10px 20px;
     }
 
     .home .cards{
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 12px;
+      gap: 10px;
       justify-items: center;
     }
 
@@ -69,120 +69,31 @@
       overflow: hidden;
       border: 1px solid #ddd;
       width: 100%;
-      max-width: 160px;   /* ширина менша */
-      min-height: 200px;  /* компактніше */
+      max-width: 120px;   /* ще менші */
+      min-height: 160px;
       transition: transform .18s ease, box-shadow .18s ease;
     }
-    .home .card:hover{ transform: translateY(-3px); box-shadow: 0 8px 18px rgba(0,0,0,.25); }
+    .home .card:hover{ transform: translateY(-2px); box-shadow: 0 6px 14px rgba(0,0,0,.22); }
 
     .home .card .media{
       width: 100%;
-      height: 70px;
+      height: 60px;  /* зменшене фото */
       background-size: cover;
       background-position: center;
     }
 
     .home .card .content{
-      padding: 8px 10px 12px;
+      padding: 6px 8px 10px;
       text-align: center;
       display: grid;
-      gap: 4px;
+      gap: 3px;
     }
     .home .card h3{
       margin: 0;
-      font-size: 13px;
+      font-size: 11px;
       font-weight: 700;
       line-height: 1.2;
     }
     .home .card p{
       margin: 0 auto;
-      color: var(--text-muted);
-      font-size: 11px;
-      line-height: 1.3;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-    }
-
-    .home .btn{
-      display: inline-block;
-      margin: 6px auto 0;
-      padding: 5px 12px;
-      background: var(--btn);
-      color: #fff;
-      text-decoration: none;
-      font-weight: 700;
-      font-size: 12px;
-      border-radius: 999px;
-      transition: background .18s ease, transform .18s ease;
-    }
-    .home .btn:hover{ background: var(--btn-hover); transform: translateY(-1px); }
-  </style>
-</head>
-
-<body class="home">
-  <!-- HERO -->
-  <header class="hero">
-    <h1>Фінансовий блог</h1>
-    <p>Поради про фінанси, інвестиції, економію та стабільність</p>
-  </header>
-
-  <!-- КАРТКИ -->
-  <main class="wrap">
-    <section class="cards">
-
-      <!-- 1 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=900&q=80');"></div>
-        <div class="content">
-          <h3>Фінансова грамотність</h3>
-          <p>Розберіться, як працюють гроші, щоб жити впевнено.</p>
-          <a class="btn" href="article1.html">Читати</a>
-        </div>
-      </article>
-
-      <!-- 2 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
-        <div class="content">
-          <h3>Як планувати бюджет</h3>
-          <p>Навчіться правильно розподіляти витрати.</p>
-          <a class="btn" href="article2.html">Читати</a>
-        </div>
-      </article>
-
-      <!-- 3 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=900&q=80');"></div>
-        <div class="content">
-          <h3>Інвестування</h3>
-          <p>Почніть без великих ризиків і з розумінням інструментів.</p>
-          <a class="btn" href="article3.html">Читати</a>
-        </div>
-      </article>
-
-      <!-- 4 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
-        <div class="content">
-          <h3>Фінансова подушка</h3>
-          <p>Захист для будь-кого.</p>
-          <a class="btn" href="article4.html">Читати</a>
-        </div>
-      </article>
-
-      <!-- 5 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://raw.githubusercontent.com/Hnidets523/My-finance-/refs/heads/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png');"></div>
-        <div class="content">
-          <h3>Економія грошей</h3>
-          <p>Лайфхаки без втрати якості.</p>
-          <a class="btn" href="article5.html">Читати</a>
-        </div>
-      </article>
-
-    </section>
-  </main>
-</body>
-</html>
+      color:
