--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Фінансовий блог</title>
-  <link rel="stylesheet" href="style.css">
   <style>
     body {
       margin: 0;
@@ -29,10 +28,12 @@
       color: #cfcfcf;
     }
 
+    /* Сітка для карток */
     .cards {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 12px;
+      justify-content: center;
       max-width: 1000px;
       margin: 0 auto;
       padding: 20px 10px;
@@ -46,6 +47,11 @@
       overflow: hidden;
       text-align: center;
       transition: transform 0.2s ease;
+      width: 100%;
+      height: 200px; /* однакова висота */
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     .card:hover {
@@ -54,34 +60,34 @@
 
     .card .media {
       width: 100%;
-      height: 100px;
+      height: 80px; /* менші картинки */
       background-size: cover;
       background-position: center;
     }
 
     .card .content {
-      padding: 10px;
+      padding: 8px;
     }
 
     .card h3 {
-      margin: 8px 0;
-      font-size: 15px;
+      margin: 6px 0;
+      font-size: 14px;
     }
 
     .card p {
-      font-size: 13px;
+      font-size: 12px;
       color: #555;
-      margin: 0 0 10px;
+      margin: 0 0 6px;
     }
 
     .btn {
       display: inline-block;
-      padding: 6px 14px;
+      padding: 5px 12px;
       background: #00a86b;
       color: #fff;
       border-radius: 8px;
       text-decoration: none;
-      font-size: 13px;
+      font-size: 12px;
       font-weight: bold;
     }
 
@@ -89,16 +95,24 @@
       background: #007f50;
     }
 
-    /* --- Адаптив --- */
+    /* --- нижні 2 карточки по центру --- */
+    .cards > .card:nth-last-child(-n+2) {
+      grid-column: span 1;
+    }
+    .cards {
+      grid-auto-rows: 1fr;
+    }
+    .cards:has(.card:nth-last-child(2)) {
+      grid-template-rows: auto auto;
+    }
     @media (max-width: 768px) {
       .cards {
         grid-template-columns: repeat(2, 1fr);
       }
     }
-
     @media (max-width: 500px) {
       .cards {
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: 1fr;
       }
     }
   </style>
